ThunkGenerators does not convert positive double zero into integer zero https://bugs.webkit.org/show_bug.cgi?id=67553

Reviewed by Gavin Barraclough.

This is an 0.5% speed-up on V8 and neutral elsewhere.

* jit/SpecializedThunkJIT.h:
(JSC::SpecializedThunkJIT::returnDouble):


Canonical link: https://commits.webkit.org/83407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94500 268f45cc-cd09-0410-ab3c-d52691b4dbfc